[package]
name = "display-table"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { workspace = true, features = [
  "default",
  "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = { workspace = true, features = ["auto-color", "humantime"] }
egui_extras = "0.29.1"
